# Desktop-Voice-Assistant

./: README.md  pyproject.toml
src/voice_assistant/: __init__.py  app.py  config.py  gui.py  intents.py  stt.py  tts.py
src/voice_assistant/skills/: base.py  skill_email.py  skill_files.py  skill_jokes.py  skill_system.py  skill_time.py  skill_weather.py  skill_web.py  skill_wikipedia.py
tests/: test_intents.py
